--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -141,7 +141,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="280dp"
+                    android:layout_height="180dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -207,12 +207,14 @@
                         <View
                             android:layout_width="1px"
                             android:layout_height="match_parent"
+                            android:visibility="gone"
                             android:layout_gravity="center_vertical"
                             android:background="@color/tab_middle_line_color" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:layout_height="match_parent">
 
                             <ImageView
@@ -236,12 +238,14 @@
                         <View
                             android:layout_width="1px"
                             android:layout_height="match_parent"
+                            android:visibility="gone"
                             android:layout_gravity="center_vertical"
                             android:background="@color/tab_middle_line_color" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:layout_height="match_parent">
 
                             <ImageView
@@ -267,7 +271,7 @@
                     <android.support.v4.view.ViewPager
                         android:id="@+id/viewPagerTab"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_weight="1.0"
                         android:flipInterval="30"
