--- a/app/src/main/res/layout/fragment_one_item.xml
+++ b/app/src/main/res/layout/fragment_one_item.xml
@@ -30,10 +30,12 @@
                 android:maxLines="2"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
+                android:layout_marginLeft="5dp"
                 android:textColor="@color/black" />
 
             <ImageView
                 android:id="@+id/oneitem_frag_two_ib"
+                android:visibility="gone"
                 android:layout_width="160dp"
                 android:layout_height="80dp"
                 android:onClick="onClick" />
@@ -44,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
+                android:visibility="gone"
                 android:paddingTop="10dp"
                 android:textColor="@color/black" />
         </LinearLayout>
@@ -67,6 +70,7 @@
                 android:id="@+id/oneitem_frag_three_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:paddingTop="8dp"
@@ -75,12 +79,14 @@
 
             <ImageView
                 android:id="@+id/oneitem_frag_four_ib"
+                android:visibility="gone"
                 android:layout_width="160dp"
                 android:layout_height="80dp"
                 android:onClick="onClick" />
 
             <TextView
                 android:id="@+id/oneitem_frag_four_text"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
